# legal-function-operating-system

./: .gitignore  CASE_STUDY.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_requests.json
docs/: architecture.mmd
examples/: board-pack.json  board-pack.md
src/legal_function_os/: __init__.py  board_pack.py  cli.py  rules.py
tests/: test_rules.py
